fixing post and put  requests
